--- a/docs/exercises/templates/box_model/box_model.html
+++ b/docs/exercises/templates/box_model/box_model.html
@@ -13,7 +13,7 @@
     <!-- Navigation panel -->
     <div id="nav-placeholder"></div>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="/docs/assets/nav/import-nav.js"></script>
+    <script src="https://nolifer47.github.io/Web-Projects/assets/nav/import-nav.js"></script>
     <!-- end of Navigation panel -->
 
     <main>
